utils/etc/iptables/iptables.rules
# Generated by iptables-save v1.8.9 on Fri Jul 28 21:32:20 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LOG_AND_DROP - [0:0]
-A INPUT -s 2.56.220.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 5.101.96.0/20 -p tcp -j LOG_AND_DROP
-A INPUT -s 5.181.24.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 5.252.24.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 24.144.64.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 24.199.64.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 37.139.0.0/19 -p tcp -j LOG_AND_DROP
-A INPUT -s 45.55.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 45.82.64.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 45.86.16.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 45.143.44.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 46.101.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 64.23.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 64.225.0.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 64.226.64.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 64.227.0.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 64.227.128.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 67.205.128.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 67.207.64.0/19 -p tcp -j LOG_AND_DROP
-A INPUT -s 68.183.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 69.55.48.0/20 -p tcp -j LOG_AND_DROP
-A INPUT -s 80.240.128.0/20 -p tcp -j LOG_AND_DROP
-A INPUT -s 82.196.0.0/20 -p tcp -j LOG_AND_DROP
-A INPUT -s 95.85.0.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 103.253.144.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 104.131.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 104.236.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 104.248.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 107.170.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 108.29.37.0/24 -p tcp -j LOG_AND_DROP
-A INPUT -s 128.199.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 128.199.32.0/19 -p tcp -j LOG_AND_DROP
-A INPUT -s 128.199.64.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 128.199.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 134.122.0.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 134.199.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 134.209.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 137.184.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 138.68.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 138.197.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 139.59.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 141.0.168.0/21 -p tcp -j LOG_AND_DROP
-A INPUT -s 142.93.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 143.110.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 143.198.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 143.244.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 144.126.192.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 146.185.128.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 146.190.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 147.182.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 152.42.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 157.230.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 157.245.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 159.65.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 159.89.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 159.203.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 159.223.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 161.35.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 162.243.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 163.47.8.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 164.90.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 164.92.64.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 164.92.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 165.22.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 165.227.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 165.232.32.0/19 -p tcp -j LOG_AND_DROP
-A INPUT -s 165.232.64.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 165.232.128.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 167.71.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 167.99.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 167.172.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 167.172.0.0/20 -p tcp -j LOG_AND_DROP
-A INPUT -s 170.64.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 174.138.0.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 178.62.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 178.128.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 185.14.184.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 185.88.180.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 188.166.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 188.226.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 192.34.56.0/21 -p tcp -j LOG_AND_DROP
-A INPUT -s 192.81.208.0/20 -p tcp -j LOG_AND_DROP
-A INPUT -s 192.241.128.0/17 -p tcp -j LOG_AND_DROP
-A INPUT -s 194.242.22.0/23 -p tcp -j LOG_AND_DROP
-A INPUT -s 194.242.28.0/23 -p tcp -j LOG_AND_DROP
-A INPUT -s 195.248.90.0/24 -p tcp -j LOG_AND_DROP
-A INPUT -s 198.199.64.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 198.211.96.0/19 -p tcp -j LOG_AND_DROP
-A INPUT -s 198.232.147.0/24 -p tcp -j LOG_AND_DROP
-A INPUT -s 199.4.223.0/24 -p tcp -j LOG_AND_DROP
-A INPUT -s 204.48.16.0/20 -p tcp -j LOG_AND_DROP
-A INPUT -s 206.81.0.0/19 -p tcp -j LOG_AND_DROP
-A INPUT -s 206.189.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 207.154.192.0/18 -p tcp -j LOG_AND_DROP
-A INPUT -s 208.68.36.0/22 -p tcp -j LOG_AND_DROP
-A INPUT -s 209.38.0.0/16 -p tcp -j LOG_AND_DROP
-A INPUT -s 209.97.128.0/18 -p tcp -j LOG_AND_DROP
-A LOG_AND_DROP -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LOG_AND_DROP -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "deny DO: "
-A LOG_AND_DROP -j DROP
COMMIT
